19 Nov 2005 mipsator
 * fixed pmkfile, pmkcfg.sh and compat.
 * polished a bit func.c.

17 Nov 2005 mipsator
 * added basic distclean target in generated makefile and started to
   prepare for advanced tags support.

10 Nov 2005 mipsator
 * added use of new tags functions in pmk.

# snapshot 0.9.3-s4

05 Nov 2005 mipsator
 * finished basic tag support in pmkscan for config file generation.
 * added pmksyntax.5 manual page to give a common overview of PMK basic
   syntax used in pmkfile and scanfile.

04 Nov 2005 mipsator
 * fixed a small bug in c language parser.
 * added a start of config file template generation in pmkscan.

27 Oct 2005 mipsator
 * added support for extra tags in pmkscan.

27 Oct 2005 mipsator
 * started improvements to pmkscan (see TODO).

25 Oct 2005 mipsator
 * added support for sub headers, language label and language option in
   pmkscan.

24 Oct 2005 mipsator
 * fixed a bug when generating a pmkfile that has no checks, noticed by
   veins of skreel.org.
 * set './scanfile' as default specification file for pmkscan when no
   option is given at the command line.

# snapshot 0.9.3-s3

23 Oct 2005 mipsator
 * misc changes before new snapshot.

19 Oct 2005 mipsator
 * improved/fixed the pmkfile generation in pmkscan.

13 Oct 2005 mipsator
 * polished checks in func.
 * added scanfile.5 man page.

10 Oct 2005 mipsator
 * rewritten check_header() and check_type() to guarantee the recording
   of tags.

06 Oct 2005 mipsator
 * added conv_to_label() to fix label generation in pmkscan.

05 Oct 2005 mipsator
 * new engine for pmkfile generation in pmkscan (thought need to have a
   better engine for label names).

02 Oct 2005 mipsator
 * fixed command line option parsing in pmksetup (broken after 0.9.3 with
   prseng import).

28 Sep 2005 mipsator
 * splitted member detection in CHECK_TYPE, now type and member are
   checked separatly.

27 Sep 2005 mipsator
 * polished code builder stuff, now used in check_header, check_lib and
   check_type.
