@@ -1,4 +1,4 @@
-# Makefile template generated by pmkscan (2005-11-17 22:03).
+# Makefile template generated by pmkscan (2005-11-22 22:47).
 
 CPP=		@CPP@
 
@@ -65,6 +65,16 @@ SYSCONFDIR=	@SYSCONFDIR@
 .cc.o:
 	$(CC) $(CFLAGS) -o $@ -c $<
 
+
+#
+# directory list
+#
+DIRLIST=	. CVS compat data data/CVS doc man man/CVS samples tests
+
+#
+# list of generated files
+#
+GEN_FILES=	Makefile compat/config.h
 
 #
 # object dependency lists
@@ -356,10 +366,13 @@ deinstall_data:
 		$(RM) $(RMFLAGS) $(DESTDIR)$(DATADIR)/$$d; \
 	done
 
-distclean:
-	$(RM) $(RMFLAGS) *.scan
-	$(RM) $(RMFLAGS) *.log
-	$(RM) $(RMFLAGS) *.core
+distclean: clean
+	$(RM) $(RMFLAGS) $(GEN_FILES)
+	@for d in $(DIRLIST); do \
+		$(RM) $(RMFLAGS) $$d/*.scan; \
+		$(RM) $(RMFLAGS) $$d/*.log; \
+		$(RM) $(RMFLAGS) $$d/*.core; \
+	done
 
 #
 # object rules
