@@ -1,3 +1,6 @@
+22 Nov 2005 mipsator
+ * improved distclean target in generated makefile.
+
 19 Nov 2005 mipsator
  * fixed pmkfile, pmkcfg.sh and compat.
  * polished a bit func.c.
